regression_tests/snap/check/teststm2/teststm2.err
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:24 by ccrook




================================================================================
                                                             7-SEP-2018 09:39:24

                                 ERROR SUMMARY

================================================================================

Error: Cannot use add_coordinate_file before coordinate_file is loaded
       Line 2: File teststm2.snp

Error: Definition of coordinate_file is missing
       Line 2: File teststm2.snp

Error: Definition of data_file is missing
       Line 2: File teststm2.snp

Error: The command file is not correct
