regression_tests/snap/check/teststm2/teststm2.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.14-3f3f047

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  5 2018 13:25:47

================================================================================
                     Run at  7-SEP-2018 09:39:24 by ccrook




================================================================================
Regression tests - multiple coordinate files                 7-SEP-2018 09:39:24

                                     ERRORS

================================================================================

Note: 4 errors reported in teststm2.err
